--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo. this is changes</p>
+  <p>All changes are done</p>
 
 </body>
 </html> 
