--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link src="style.css" type="text/stylesheet"/>
+<link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
 <h1>Hello world!</h1>
-<p>This is the first file in my new Git Repo. this is changes</p>
-  <p>All changes are done</p>
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>This line is here to show how merging works.</p>
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html> 
